--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ body {
     </video>
   </div>
 
-  <a href="/index2.html" class=" contentbottom btn btn-outline-dark btn-lg" style="z-index:100000">Tiếp tục</a>  
+  <a href="https://thanhtv1309.github.io/happybirthday/index2.html" class=" contentbottom btn btn-outline-dark btn-lg" style="z-index:100000">Tiếp tục</a>  
 
   <script>
 
