--- a/index2.html
+++ b/index2.html
@@ -202,7 +202,7 @@ body {
   </div>
   <div class="contentbottom">
     <!-- <h2 class="text_shadows">Happy Birthday</h2> -->
-    <a class="btn btn-outline-danger btn-lg">Chọn Quà</a>
+    <a href="https://thanhtv1309.github.io/happybirthday/index3.html" class="btn btn-outline-danger btn-lg">Chọn Quà</a>
   </div>
 
   <div class="image">
