--- a/index.html
+++ b/index.html
@@ -181,7 +181,14 @@ body {
 .video {
   width: 70%;
 }
-
+.contentbottom {
+  display: flex;
+  height: 100%;
+  margin-bottom: 4rem;
+  align-items: flex-end;
+  justify-content: center;
+  z-index: 10000;
+}
 
   </style>
 
@@ -195,9 +202,11 @@ body {
       <source src="./1.mp4" type="video/mp4">
     </video>
   </div>
-
-  <a href="https://thanhtv1309.github.io/happybirthday/index2.html" class=" contentbottom btn btn-outline-dark btn-lg" style="z-index:100000">Tiếp tục</a>  
-
+<!-- 
+  <a href="https://thanhtv1309.github.io/happybirthday/index2.html" class=" contentbottom btn btn-outline-dark btn-lg" style="z-index:100000">Tiếp tục</a>   -->
+ <div class="contentbottom">
+    <a href="https://thanhtv1309.github.io/happybirthday/index2.html" class="btn btn-outline-danger btn-lg">Tiếp tục</a>
+  </div>
   <script>
 
   /*
