--- a/index3.html
+++ b/index3.html
@@ -137,7 +137,7 @@
         "Cà phê đắng thì không thể thiếu đường và sữa", // Cú pháp của 1 hàng chữ  " text ",
         "Anh và các con thì không thể không có em.", // sử dụng ký tự gây lỗi trong câu thì thêm \ đằng trc ký tự vd: " \"Hello\" "
         "Tình yêu là bên nhau vui vẻ,",
-        "Lặng yên khi trờ đầy giông bão",
+        "Lặng yên khi trời đầy giông bão",
         "Em yên tâm, bố con anh vẫn ở đây,",
         "Vẵn sẽ nắm tay em đi hết con đường này.",
         "Chúc em có 1 ngày sinh nhật thật vui vẻ nha.",
